Update version to 1.1: Refined toolbar design, added line drawing (Shift+Drag), magnifier design settings, localized UI (EN/JP), and fixed tray icon.

--- a/ScreenPresenterAssist.csproj
+++ b/ScreenPresenterAssist.csproj
@@ -8,8 +8,15 @@
     <UseWPF>true</UseWPF>
     <UseWindowsForms>true</UseWindowsForms>
     <ApplicationIcon>Resources\app-icon.ico</ApplicationIcon>
-    <AssemblyName>KoScreenPresenterAssist</AssemblyName>
+    <AssemblyName>ScreenPresenterAssist</AssemblyName>
+    <Version>1.1.0</Version>
+    <AssemblyVersion>1.1.0</AssemblyVersion>
+    <FileVersion>1.1.0</FileVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\app-icon.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Windows.CsWin32" Version="0.3.269">
